--- a/Grid.html
+++ b/Grid.html
@@ -11,8 +11,25 @@
     <title>Grid-Mini-Project</title>
 </head>
 <body>
-    <a href="Grid.html" class="btn">
+    <!-- <a href="Grid.html" class="btn">
         Back To Home!
-    </a>
+    </a> -->
+
+    <nav class="main-navbar">
+        <ul>
+            <li>
+                <a href="hero.html">Hero</a>
+            </li>
+            <li>
+                <a href="cards.html">cards</a>
+            </li>
+            <li>
+                <a href="titles.html">titles</a>
+            </li>
+            <li>
+                <a href="layout.html">layout</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
