--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-    <title>Grid-Mini-Project</title>
+    <title>Lay OutProject</title>
 </head>
 <body>
     <a href="Grid.html" class="btn">
