--- a/cards.html
+++ b/cards.html
@@ -11,6 +11,92 @@
     <title>Cards Project</title>
 </head>
 <body>
+    <section class="cards">
+        <div class="title">
+            <h1>three Column Layout</h1>
+        </div>
+        <div class="cards-center">
+            <!-- Single Card -->
+            <article class="card">
+                <img src="./Images/size-image-1.jpeg" alt="">
+                <!-- Card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus expedita, tempore nisi iusto tenetur illum.
+                    </p>
+                </div>
+                <!-- Card Footer -->
+                <div class="card-footer">
+                    <span><i class="fab fa-twitter"></i></span>
+                    <span><i class="fab fa-facebook"></i></span>
+                    <span><i class="fab fa-instagram"></i></span>
+                    <span><i class="fab fa-linkedin"></i></span>
+                </div>
+            </article>
+            <!-- End of Single Card -->
+
+            <!-- Single Card -->
+            <article class="card">
+                <img src="./Images/size-image-2.jpeg" alt="">
+                <!-- Card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus expedita, tempore nisi iusto tenetur illum.
+                    </p>
+                </div>
+                <!-- Card Footer -->
+                <div class="card-footer">
+                    <span><i class="fab fa-twitter"></i></span>
+                    <span><i class="fab fa-facebook"></i></span>
+                    <span><i class="fab fa-instagram"></i></span>
+                    <span><i class="fab fa-linkedin"></i></span>
+                </div>
+            </article>
+            <!-- End of Single Card -->
+
+            <!-- Single Card -->
+            <article class="card">
+                <img src="./Images/size-image-3.jpeg" alt="">
+                <!-- Card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus expedita, tempore nisi iusto tenetur illum.
+                    </p>
+                </div>
+                <!-- Card Footer -->
+                <div class="card-footer">
+                    <span><i class="fab fa-twitter"></i></span>
+                    <span><i class="fab fa-facebook"></i></span>
+                    <span><i class="fab fa-instagram"></i></span>
+                    <span><i class="fab fa-linkedin"></i></span>
+                </div>
+            </article>
+            <!-- End of Single Card -->
+
+            <!-- Single Card -->
+            <article class="card">
+                <img src="./Images/size-image-4.jpeg" alt="">
+                <!-- Card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus expedita, tempore nisi iusto tenetur illum.
+                    </p>
+                </div>
+                <!-- Card Footer -->
+                <div class="card-footer">
+                    <span><i class="fab fa-twitter"></i></span>
+                    <span><i class="fab fa-facebook"></i></span>
+                    <span><i class="fab fa-instagram"></i></span>
+                    <span><i class="fab fa-linkedin"></i></span>
+                </div>
+            </article>
+            <!-- End of Single Card -->
+        </div>
+    </section>
     <a href="Grid.html" class="btn">
         Back To Home!
     </a>
