--- a/cards.html
+++ b/cards.html
@@ -83,7 +83,7 @@
                 <div class="card-info">
                     <h3>Card Title</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus expedita, tempore nisi iusto tenetur illum.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus expedita, tempore nisi iusto tenetur illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae consequatur in debitis, sunt eligendi consequuntur illo cumque fugit vel obcaecati!
                     </p>
                 </div>
                 <!-- Card Footer -->
