--- a/layout.html
+++ b/layout.html
@@ -8,79 +8,12 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-    <title>Lay OutProject</title>
+    <title>Tiles Project</title>
 </head>
 <body>
     <a href="Grid.html" class="btn">
         Back To Home!
     </a>
 
-
-    <section class="tiles">
-        <div class="tile">
-            <h1>Titles Layout</h1>
-        </div>
-        <div class="tiles-center">
-            <!-- Single title -->
-            <article class="tile-1">
-                <img src="./Images/size-image-1.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-2">
-                <img src="./Images/size-image-2.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-3">
-                <img src="./Images/size-image-3.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-4">
-                <img src="./Images/size-image-4.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-5">
-                <img src="./Images/size-image-1.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-6">
-                <img src="./Images/size-image-2.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-7">
-                <img src="./Images/size-image-3.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-8">
-                <img src="./Images/size-image-4.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-9">
-                <img src="./Images/size-image-3.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-
-            <!-- Single title -->
-            <article class="tile-10">
-                <img src="./Images/size-image-2.jpeg" alt="">
-            </article>
-            <!-- End of Single Title -->
-        </div>
-    </section>
 </body>
 </html>
