--- a/layout.html
+++ b/layout.html
@@ -11,6 +11,40 @@
     <title>Tiles Project</title>
 </head>
 <body>
+    <section class="main-window">
+        <section class="center1">
+        <header class="header">Grid Makes Layout Easy</header>
+        <!-- nav bar -->
+        <nav class="navbar">
+        <ul class="parent">
+            <li class="lil li1">
+                <a href="hero.html" >Hero</a>
+            </li>
+            <li class="lil lil2">
+                <a href="cards.html">cards</a>
+            </li>
+            <li class="lil">
+                <a href="titles.html">titles</a>
+            </li>
+            <li class="lil">
+                <a href="layout.html">layout</a>
+            </li>
+        </ul>
+        </nav>
+        <!-- Text -->
+        <p class="lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium adipisci esse voluptatibus impedit dolor est, vero tempora aliquam neque sapiente dolores ex. Architecto veniam nihil voluptate odio voluptatum, suscipit ea voluptas ut? Enim, distinctio ea. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti aspernatur amet temporibus, nam totam dolorum. Delectus cumque fuga, eveniet consequuntur quia minus natus non? Consequatur provident autem aliquid fuga, porro aliquam nam in officiis! Error eligendi possimus dignissimos similique et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, tempora est dolore non quia accusamus ut voluptas esse. Magni repudiandae inventore temporibus sint odio tenetur sunt ad modi doloremque atque cumque necessitatibus officiis eum ex fugit dolore iure rerum neque numquam dicta, quia qui aliquid aliquam. Temporibus id voluptatibus esse.</p>
+        <!-- icons -->
+        <div class="icons1">
+                    <span><i class="fab         fa-twitter"></i></span>
+                    <span><i class="fab fa-facebook"></i></span>
+                    <span><i class="fab fa-instagram"></i></span>
+                    <span><i class="fab fa-linkedin"></i></span>
+        </div>
+
+    <footer class="footer">
+        Copyright & All Rights Reserved
+    </footer>
+</section>
     <a href="Grid.html" class="btn">
         Back To Home!
     </a>
